# devsecops-tactical-workbook

./: .gitignore  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  configure.ac
.github/: latex.yaml
.github/workflows/: docker_compose.yml
book/: Makefile  Makefile.am  devsecops_tactical.tex  preamble.tex
book/backmatter/: mybib.bib
book/dot/: 21-docker.dot  21-docker.tex  22-gh-prelab.dot  22-gh-prelab.tex  22-github.dot  24-python.dot  26-test-quality.dot  26-test-quality.tex  31-sec-test.dot  31-sec-test.tex  41-cicd.dot  41-cicd.tex  42-infra.dot  42-infra.tex
book/frontmatter/: colophon.tex  preface.tex
book/mainmatter/: 01-introduction.tex  01_introduction.tex  03_setup.tex  04_containers.tex  08_about-ci-cd.tex  12-big-ideas.tex  13-setup.tex  21-docker.tex  22-github.tex  23-makefiles.tex  24-python.tex  25-nix.tex  26-test-quality.tex  30-security-concepts.tex  31-security-testing.tex  40-ops.tex  41-about-ci-cd.tex  42-infrastructure.tex  43-tools.tex  45-kubernetes.tex  51-test-lab.tex
code/chapter-three/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: README.md  conf.py  global.rst  index.rst  sphinxmanual.cls
docs/00-introduction/: introduction.rst  setup.rst
docs/01-framework/: docker.rst  key_mgmt.rst  makefiles.rst  python.rst  revision.rst
docs/02-cont-int-dep/: about-ci-cd.rst  scanners.rst
docs/03-infrastructure/: aws.rst  gcp.rst  terraform.rst
docs/03-packer/: about-packer.rst
docs/99-reference/: citations.rst  (+1 more)
labs/: ch3  ch4  ch5  ch6  ch7  ch8  ch9
proposal/: README.md
python/: requirements.txt
(+78 files in other folders)
